# triangle_finder

./: Algorithm.odt  CMakeLists.txt  README.md  common.h  segmentation.cpp  segmentation.h  shape_analysis.cpp  shape_analysis.h  triangle_finder.cpp
